# next-tauri

./: components.json  next.config.js  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.json
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/examples/: icns.rs  local.rs  rss.rs
src-tauri/src/: main.rs
src-tauri/src/command/: application.rs  local_ip.rs  mod.rs  rss.rs  splash_screen.rs
src/app/: layout.tsx
src/app/(root)/: layout.tsx  page.tsx
src/app/(root)/myself/: page.tsx
src/app/(root)/rss/: page.tsx
src/app/(root)/rss/rssRead/: page.tsx
src/app/splashscreen/: page.tsx
src/components/LeftSidebar/: LeftSidebar.tsx
src/components/podcastCard/: PodcastCard.tsx
src/components/topBar/: TopBar.tsx
src/components/ui/: toaster.tsx
src/constants/: index.ts
src/style/: index.css
