[package]
name = "app"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
default-run = "app"
edition = "2021"
rust-version = "1.60"

[build-dependencies]
tauri-build = { version = "1.5.2", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.6.5", features = [] }
reqwest = { version = "0.12.5", features = ["blocking", "default"] }
anyhow = "1.0.86"
cocoa = "0.25.0"
objc = "0.2.7"
plist = "1.7.0"
tokio = { version = "1.38.0", features = ["full"] }
base64 = "0.22.1"
futures = "0.3.30"
tauri-icns = "0.1.0"

[features]
custom-protocol = [ "tauri/custom-protocol" ]
